add IAM Instance Profile (ie IAM role) to EC2 instance

--- a/windows-stata14.yml
+++ b/windows-stata14.yml
@@ -19,6 +19,7 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-31cf9554
+	  IamInstanceProfile: AIPAJ66I7TYTJ5PC24CLW
       InstanceInitiatedShutdownBehavior: terminate
       InstanceType:
         Ref: InstanceTypeParameter
