--- a/windows-stata14.yml
+++ b/windows-stata14.yml
@@ -19,7 +19,7 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       ImageId: ami-31cf9554
-	  IamInstanceProfile: AIPAJ66I7TYTJ5PC24CLW
+      IamInstanceProfile: Service-Catalog-User-Instance
       InstanceInitiatedShutdownBehavior: terminate
       InstanceType:
         Ref: InstanceTypeParameter
